--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -1,66 +1,43 @@
-name: main
-
+name: ci
 on:
   push:
     branches:
-      - 'master'
-    tags:
-      - 'v*'
-  pull_request:
-
+      - master
 jobs:
-  lint:
+  build-and-deploy-image:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
-      - uses: actions/setup-go@v2
-        with:
-          go-version: 1.16
-      - uses: actions/setup-node@v2
-        with:
-          node-version: '14'
-      - run: npm i -g commitlint
-      - run: make lint
-  test:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v2
-      - uses: actions/setup-go@v2
-        with:
-          go-version: 1.16
-      - uses: actions/setup-node@v2
-        with:
-          node-version: '14'
-      - run: make test
-  release:
-    runs-on: ubuntu-latest
-    needs: [lint, test]
-    if: startsWith(github.event.ref, 'refs/tags/v')
-    steps:
-      - uses: actions/checkout@v2
-        with:
-          fetch-depth: 0
-      - uses: actions/setup-go@v2
-        with:
-          go-version: 1.16
-      - uses: actions/setup-node@v2
-        with:
-          node-version: '14'
+      # 拉取master分支
+      - name: Checkout
+        uses: actions/checkout@master
+      # 设置qemu来编译多个平台的镜像
       - name: Set up QEMU
         uses: docker/setup-qemu-action@v1
+      # 设置buildx
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v1
-      - name: Build fronetend
-        run: make build-frontend
-      - name: Login to Docker Hub
+      # 配置缓存加快编译速度
+      - name: Cache Docker layers
+        uses: actions/cache@v2
+        with:
+          path: /tmp/.buildx-cache
+          key: ${{ runner.os }}-buildx-${{ github.sha }}
+          restore-keys: |
+            ${{ runner.os }}-buildx-
+      # 登陆dockerhub
+      - name: Login to DockerHub
         uses: docker/login-action@v1
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
-      - name: Run GoReleaser
-        uses: goreleaser/goreleaser-action@v2
+      # 编译并且推送到dockerhub
+      - name: Build and push
+        uses: docker/build-push-action@v2
         with:
-          version: latest
-          args: release --rm-dist
-        env:
-          GITHUB_TOKEN: ${{ secrets.GH_PAT }}
+          push: true
+          platforms: linux/386,linux/amd64,linux/arm/v6,linux/arm/v7,linux/arm64
+          cache-from: type=local,src=/tmp/.buildx-cache
+          cache-to: type=local,dest=/tmp/.buildx-cache
+          tags: |
+            bboysoul/miwifi-exporter:latest
+            bboysoul/miwifi-exporter:v1.0.0
