--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -9,5 +9,5 @@ jobs:
      uses: elgohr/Publish-Docker-Github-Action@master
      with:
        name: ispeakcode/docker-githubaction
-       username: ${{ secrets.DOCKER_USERNAME }}
+       username: ${{ secrets.DOCKERHUB_USERNAME }}
        password: ${{ secrets.DOCKERHUB_TOKEN }}
